# swigbind11

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
example/: .gitignore  CMakeLists.txt  README.md  fsplugin.cpp  fsplugin_test.py  local_backend.py  pyproject.toml  setup.cfg  setup.py
example/src/example_mesh_library/: CMakeLists.txt  mesh.cpp  mesh.hpp  mesh.i
example/src/fsplugin/: CMakeLists.txt  __init__.py  fsplugin.cpp
example/src/meshplugin/: CMakeLists.txt  __init__.py  meshplugin.cpp
example/tests/: conftest.py  test_fsplugin.py  test_meshplugin.py
example/tests/data/: hexcube_10x10x10.h5
include/swigbind11/: swigbind11.hpp
swigbind11/: __init__.py  __main__.py  commands.py
tools/: swigbind11Config.cmake.in
