[build-system]
requires = [
  "scikit-build-core",
  "swig<4.4.0",
  "pybind11",
  ]
# Use a custom in-tree backend to inject local dependencies.
# This is a workaround because scikit-build-core does not support relative paths
# in 'build-system.requires'. This allows us to install 'swigbind11' from a
# local relative path until it is officially available on PyPI.
build-backend = "local_backend"
backend-path = ["."]

[project]
name = "meshplugin"
version = "0.1.0"
authors = [
  { name = "Ramandeep Jain", email = "ramandeep.jain@dlr.de" },
  { name = "Severin Strobl"},
]
description = "Sample project demonstrating usage of swigbind11 for an prototypical swig project"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
