[metadata]
name = fsplugin
version = 0.1.0
author = Severin Strobl
author_email = severin.strobl@dlr.de
description = Sample project demonstrating usage of swigbind11 for FSDM
url = https://gitlab.dlr.de/stro_se/swigbind11
long_description = file: README.md
keywords =
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[tool.pytest]
testpaths = tests
